# webcrank-dispatch.hs

./: .ghci  .gitignore  .travis.yml  README.md  default.nix  webcrank-dispatch.cabal  webcrank-dispatch.nix
examples/: Examples.hs  LICENSE  Main.hs  default.nix  shell.nix  webcrank-dispatch-examples.cabal
src/Web/Crank/: Dispatch.hs
src/Web/Crank/Dispatch/: Path.hs  Route.hs  Types.hs
src/Webcrank/: Dispatch.hs
src/Webcrank/Dispatch/: Decoding.hs  Examples.hs  Path.hs  Route.hs  Types.hs
tests/: doctests.hs
