name: webcrank-dispatch
version: 0.1
build-type: Simple
cabal-version: >= 1.8

library
  hs-source-dirs:      src

  exposed-modules:     Webcrank.Dispatch

  build-depends:       base                >= 3          && < 5
                     , bytestring          >= 0.10
                     , text                >= 0.11

  ghc-options:         -Wall -O2

