name: webcrank-dispatch
version: 0.1
build-type: Simple
cabal-version: >= 1.8

library
  hs-source-dirs:      src

  exposed-modules:     Webcrank.Dispatch

  build-depends:       base                >= 4.6
                     , bytestring          >= 0.10
                     , mtl                 >= 2.0
                     , reroute             >= 0.1
                     , text                >= 0.11
                     , unordered-containers >= 0.2

  ghc-options:         -Wall -O2

